update update_exp.php and js

--- a/html/nav.html
+++ b/html/nav.html
@@ -365,7 +365,8 @@
 								<td>
 									<input type="text" class="form-control" id="upt_exp_max_num_pairs_{{exp.id}}" value="{{exp.max_num_pairs}}">
 								<td>
-									<input type="text" class="form-control" id="upt_exp_max_duration_{{exp.id}}" value="{{exp.max_duration}}">
+									<input type="text" class="form-control" id="upt_exp_max_duration_{{exp.id}}"
+										   ng-disabled="exp.name === 'Test'" value="{{exp.max_duration}}">
 								</td>
 								<td>
 									<div class="custom-control custom-checkbox" ng-if="exp.disp_type==1">
