--- a/html/exp.html
+++ b/html/exp.html
@@ -174,7 +174,7 @@
         <div class="col"></div>
     </div>
 
-    <div class="row">
+    <div class="row" style="position: absolute; bottom: 20px; width: 100%;">
         <div class="col"></div>
 
         <div class="col-sm-10">
