update style of exp

--- a/html/exp.html
+++ b/html/exp.html
@@ -1,4 +1,4 @@
-<div id="experiment" class="container" style="margin-top: 75px" ng-mousemove="captureCoordinate($event)">
+<div id="experiment" class="col-sm-12" style="margin-top: 75px" ng-mousemove="captureCoordinate($event)">
 
     <div class="row">
         <div class="col">
