--- a/html/statistics.html
+++ b/html/statistics.html
@@ -1,5 +1,5 @@
 
-<div id="statistics" class="col-sm-12" style="margin-top: 75px;margin-left: 30px; margin-right: 30px">
+<div id="statistics" class="col-sm-12" style="margin-top: 75px;">
 
     <div class="row">
         <div class="col">
