--- a/html/exp.html
+++ b/html/exp.html
@@ -1,4 +1,4 @@
-<div id="experiment" class="col-sm-12" style="margin-top: 75px" ng-mousemove="captureCoordinate($event)">
+<div id="experiment" class="container" style="margin-top: 75px" ng-mousemove="captureCoordinate($event)">
 
     <div class="row">
         <div class="col">
@@ -174,7 +174,7 @@
         <div class="col"></div>
     </div>
 
-    <div class="row" style="position: absolute; bottom: 20px; width: 100%;">
+    <div class="row" style="">
         <div class="col"></div>
 
         <div class="col-sm-10">
