update style of exp

--- a/html/new_user.html
+++ b/html/new_user.html
@@ -1,6 +1,6 @@
-<div id="begin_exp_user" class="col-sm-12" style="margin-top: 100px;margin-left: 20px">
+<div id="begin_exp_user" class="col-sm-12" style="margin-top: 100px;">
 
-	<h5 >Add User</h5>
+	<h5 style="margin-left: 20px">Add User</h5>
 	<div class="row">
 
 
