--- a/html/riddle.html
+++ b/html/riddle.html
@@ -1,7 +1,5 @@
-<div id="riddle" style="margin-top: 100px">
+<div id="riddle" class="col-sm-12" style="margin-top: 100px">
     <div class="row">
-
-
         <div class="col">
 
         </div>
@@ -112,9 +110,5 @@
 
 
     </div>
-
-
-
-
 
 </div>
