--- a/html/exp.html
+++ b/html/exp.html
@@ -1,7 +1,8 @@
-<div id="experiment" class="container" style="margin-top: 75px" ng-mousemove="captureCoordinate($event)">
+<div id="experiment" class="col-sm-12" style="margin-top: 75px" ng-mousemove="captureCoordinate($event)">
 
     <div class="row">
-        <div class="col">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
 
             <div class="row">
                 <div class="col-sm-7">
@@ -14,11 +15,12 @@
 
             <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
         </div>
+        <div class="col-sm-1"></div>
     </div>
 
     <div class="row">
 
-        <div class="col">
+        <div class="col-sm-1">
 
         </div>
 
@@ -59,7 +61,7 @@
 
         </div>
 
-        <div class="col-sm-5">
+        <div class="col-sm-4">
 
             <table class="table" id="suggestionAndMajorOpinionTable" style="display: block; overflow: auto;">
                 <tr>
@@ -171,11 +173,11 @@
 
         </div>
 
-        <div class="col"></div>
+        <div class="col-sm-1"></div>
     </div>
 
     <div class="row" style="">
-        <div class="col"></div>
+        <div class="col-sm-1"></div>
 
         <div class="col-sm-10">
             <table class="table" style="display: block; overflow: auto;">
@@ -213,7 +215,7 @@
             </table>
         </div>
 
-        <div class="col"></div>
+        <div class="col-sm-1"></div>
     </div>
 
 
