--- a/html/new_user.html
+++ b/html/new_user.html
@@ -1,6 +1,12 @@
 <div id="begin_exp_user" class="col-sm-12" style="margin-top: 100px;">
 
-	<h5 style="margin-left: 20px">Add User</h5>
+	<div class="row">
+		<div class="col-sm-12">
+			<h3>Add User</h3>
+			<hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
+		</div>
+	</div>
+
 	<div class="row">
 
 
