--- a/html/home.html
+++ b/html/home.html
@@ -32,6 +32,8 @@
 
  </div>
 -->
+ <button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="capture_screen()">Capture Screen</button>
+
 
 </div>
 
