--- a/html/home.html
+++ b/html/home.html
@@ -33,7 +33,8 @@
  </div>
 -->
  <button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="capture_screen()">Capture Screen</button>
-
+ <br>
+ <img src="" id="capture_screen">
 
 </div>
 
