--- a/html/exp.html
+++ b/html/exp.html
@@ -1,4 +1,5 @@
-<div id="experiment" class="col-sm-12" style="margin-top: 75px" ng-mousemove="captureCoordinate($event)">
+<div id="experiment" class="col-sm-12" style="margin-top: 75px" ng-mousemove="captureCoordinate($event)"
+ng-click="show_coordinate($event)">
 
     <div class="row">
         <div class="col-sm-12">
