add logs for coordinates - heat map

--- a/html/exp.html
+++ b/html/exp.html
@@ -1,4 +1,4 @@
-<div id="experiment" class="col-sm-12" style="margin-top: 75px" ng-mousemove="captureCoordinate($event)"
+<div id="experiment" class="col-sm-12" style="margin-top: 4rem" ng-mousemove="captureCoordinate($event)"
 ng-click="show_coordinate($event)">
 
     <div class="row">
@@ -9,7 +9,7 @@ ng-click="show_coordinate($event)">
                     <h3 id="exp_hello"></h3>
                 </div>
                 <div class="col-sm-5">
-                    <h6 id="time_elapsed" style="float: right; margin-top: 13px;"></h6>
+                    <h6 id="time_elapsed" style="float: right; margin-top: 0.5rem;"></h6>
                 </div>
             </div>
 
