--- a/html/nav.html
+++ b/html/nav.html
@@ -1,10 +1,10 @@
 <!-- Static navbar -->
 
 <div id="nav">
-	<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar" style="height: 56px">
+	<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar" style="height: 4rem">
 		<div class="container" style="padding-left: 0px; margin-left: 0px;">
 			<a class="navbar-brand" href="#" ng-click="hide_pages(); show_home()">
-				<img border="0" alt="InCognitoMatch" src="/images/systemLogo.png" style="height: 53px;">
+				<img border="0" alt="InCognitoMatch" src="/images/systemLogo.png" style="height: 3.8rem;">
 			</a>
 			<a class="navbar-brand" href="#" ng-click="hide_pages(); show_home()" id="navHeader" style="padding-left: 10px;">InCognitoMatch</a>
 			<!-- Left links-->
