--- a/html/exp.html
+++ b/html/exp.html
@@ -1,29 +1,29 @@
-<div id="experiment" class="col-sm-12" style="margin-top: 4rem" ng-mousemove="captureCoordinate($event)"
+<div id="experiment" class="col-sm-12" style="margin-top: 10%" ng-mousemove="captureCoordinate($event)"
 ng-click="show_coordinate($event)">
 
-    <div class="row">
-        <div class="col-sm-12">
+    <div class="row" style="height: 10%">
+        <div class="col-sm-12" style="height: 100%">
 
-            <div class="row">
-                <div class="col-sm-7">
+            <div class="row" style="height: 9%">
+                <div class="col-sm-7" style="height: 100%">
                     <h3 id="exp_hello"></h3>
                 </div>
-                <div class="col-sm-5">
-                    <h6 id="time_elapsed" style="float: right; margin-top: 0.5rem;"></h6>
+                <div class="col-sm-5" style="height: 100%">
+                    <h6 id="time_elapsed" style="float: right; margin-top: 0.5%;"></h6>
                 </div>
             </div>
 
-            <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
+            <hr style="margin-top: 0.5%; margin-bottom: 0.5%;">
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" style="height: 50%">
 
-        <div class="col-sm-1">
+        <div class="col-sm-1" style="height: 100%">
 
         </div>
 
-        <div class="col-sm-3">
+        <div class="col-sm-3" style="height: 100%">
 
             <div id="A_col_name" style="text-align:center; font-weight: 700; font-size: larger;">
                 Term A - FirstName
@@ -60,7 +60,7 @@ ng-click="show_coordinate($event)">
 
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-4" style="height: 100%">
 
             <table class="table" id="suggestionAndMajorOpinionTable" style="display: block; overflow: auto;">
                 <tr>
@@ -136,7 +136,7 @@ ng-click="show_coordinate($event)">
             </table>
         </div>
 
-        <div class="col-sm-3">
+        <div class="col-sm-3" style="height: 100%">
 
             <div id="B_col_name" style="text-align:center; font-weight: 700; font-size: larger;">
                 Term B - FirstName
@@ -172,13 +172,13 @@ ng-click="show_coordinate($event)">
 
         </div>
 
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1" style="height: 100%"></div>
     </div>
 
-    <div class="row" style="">
-        <div class="col-sm-1"></div>
+    <div class="row" style="height: 20%">
+        <div class="col-sm-1" style="height: 100%"></div>
 
-        <div class="col-sm-10">
+        <div class="col-sm-10" style="height: 100%">
             <table class="table" style="display: block; overflow: auto;">
                 <tr>
                     <td style="width: 35%; text-align: center">
@@ -214,7 +214,7 @@ ng-click="show_coordinate($event)">
             </table>
         </div>
 
-        <div class="col-sm-1"></div>
+        <div class="col-sm-1" style="height: 100%"></div>
     </div>
 
 
