update height of exp and nav to percents

--- a/html/riddle.html
+++ b/html/riddle.html
@@ -1,4 +1,4 @@
-<div id="riddle" class="col-sm-12" style="margin-top: 100px">
+<div id="riddle" class="col-sm-12" style="margin-top: 1%">
     <div class="row">
         <div class="col">
 
