--- a/html/new_user.html
+++ b/html/new_user.html
@@ -1,4 +1,4 @@
-<div id="begin_exp_user" class="col-sm-12" style="margin-top: 75px;">
+<div id="begin_exp_user" class="col-sm-12" style="margin-top: 1%;">
 
 	<div class="row">
 		<div class="col-sm-12">
