--- a/html/statistics.html
+++ b/html/statistics.html
@@ -1,5 +1,5 @@
 
-<div id="statistics" class="col-sm-12" style="margin-top: 75px;">
+<div id="statistics" class="col-sm-12" style="margin-top: 2%;">
 
     <div class="row">
         <div class="col">
@@ -7,7 +7,7 @@
                 <div class="col-sm-8">
                     <h3>Statistics</h3>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3" style="position: absolute; right: 3%;">
                     <a href="#" data-toggle="modal" data-target="#filter_statistics_modal" style="float: right;">
                         <i class="fa fa-filter" aria-hidden="true" style="font-size: 30px; line-height: 50px; height: 25px; float: right;"></i>
                     </a>
