update exp sides heights

--- a/html/exp.html
+++ b/html/exp.html
@@ -19,34 +19,32 @@ ng-click="show_coordinate($event)">
 
     <div class="row" style="height: 70%">
 
-        <div class="col-sm-1" style="height: 100%">
-
-        </div>
+        <div class="col-sm-1" style="height: 100%"></div>
 
         <div class="col-sm-3" style="height: 100%">
 
-            <div id="A_col_name" style="text-align:center; font-weight: 700; font-size: larger;">
+            <div id="A_col_name" style="height: 15%; text-align:center; font-weight: 700; font-size: larger;">
                 Term A - FirstName
             </div>
 
-            <div id="row_type_A" style="font-weight: 400; text-align:center">
-                <br>
+            <div id="row_type_A" style="height: 15%; font-weight: 400; text-align:center">
                 Column Type
             </div>
 
-            <div id="A_col_type" style="font-weight: 100; text-align:center">
+            <div id="A_col_type" style="height: 15%; font-weight: 100; text-align:center">
                 String
             </div>
 
 
-            <div id="row_instance_A" style="font-weight: 400; text-align:center">
-                <br>
+            <div id="row_instance_A" style="height: 15%; font-weight: 400; text-align:center">
                 Instance Example
             </div>
 
-            <div id="A_col_instance" style="font-weight: 100; text-align:center">
+            <div id="A_col_instance" style="height: 15%; font-weight: 100; text-align:center">
                 A, B
             </div>
+
+            <div style="height: 25%;"></div>
 
             <!--<br>
 
@@ -139,27 +137,27 @@ ng-click="show_coordinate($event)">
 
         <div class="col-sm-3" style="height: 100%">
 
-            <div id="B_col_name" style="text-align:center; font-weight: 700; font-size: larger;">
+            <div id="B_col_name" style="height: 15%; text-align:center; font-weight: 700; font-size: larger;">
                 Term B - FirstName
             </div>
 
-            <div id="row_type_B" style="font-weight: 400; text-align:center">
-                <br>
+            <div id="row_type_B" style="height: 15%; font-weight: 400; text-align:center">
                 Column Type
             </div>
 
-            <div id="B_col_type" style="font-weight: 100; text-align:center">
+            <div id="B_col_type" style="height: 15%; font-weight: 100; text-align:center">
                 String
             </div>
 
-            <div id="row_instance_B" style="font-weight: 400; text-align:center">
-                <br>
+            <div id="row_instance_B" style="height: 15%; font-weight: 400; text-align:center">
                 Instance Example
             </div>
 
-            <div id="B_col_instance" style="font-weight: 100; text-align:center">
+            <div id="B_col_instance" style="height: 15%; font-weight: 100; text-align:center">
                 A, B
             </div>
+
+            <div style="height: 25%;"></div>
 
             <!--<br>
 
