update exp sides heights

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -1,4 +1,4 @@
-<div id="finish_exp" style="margin-top: 70px;margin-left: 30px;">
+<div id="finish_exp" style="margin-top: 1%;margin-left: 0.5%;">
 
 	<h1 style="text-align: center">
 		Thank You!
@@ -43,7 +43,7 @@
                     <h3>Experiment Summary</h3>
                 </div>
             </div>
-            <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
+            <hr style="height: 20%; margin-top: 0.5%; margin-bottom: 0.5%;">
         </div>
     </div>
 
@@ -75,7 +75,7 @@
 
 </div>
 
-<div id="loading" style="margin-top: 100px; text-align: center">
+<div id="loading" style="margin-top: 2%; text-align: center">
     <h1>Please Wait..</h1>
 
     <div class="loader"></div>
