--- a/html/new_user.html
+++ b/html/new_user.html
@@ -171,10 +171,10 @@
 			</div>
 
 
-			<div id="add_user_log">
-
+			<div id="add_user_log"></div>
+			<div style="text-align: center">
+				<button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="new_user_exp()">Add User</button>
 			</div>
-			<button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="new_user_exp()">Add User</button>
 		</div>
 		<div class="col-sm-1">
 
