--- a/html/statistics.html
+++ b/html/statistics.html
@@ -19,7 +19,7 @@
 
     <div id="statistics_body_full">
         <div class="row">
-            <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
+            <hr style="height: 20%; margin-top: 0.5%; margin-bottom: 0.5%;">
         </div>
 
         <div class="row">
