--- a/html/instruction_after.html
+++ b/html/instruction_after.html
@@ -1,5 +1,5 @@
 
-<div id="instruction_after" style="margin-top: 100px;padding-left: 30px; text-align: center">
+<div id="instruction_after" style="margin-top: 2%;padding-left: 0.5%; text-align: center">
 
 	<h4>
 		Click on Continue to Start the Experiment
