update exp sides heights

--- a/html/exp.html
+++ b/html/exp.html
@@ -58,8 +58,8 @@ ng-click="show_coordinate($event)">
 
         <div class="col-sm-4" style="height: 100%">
 
-            <table class="table" id="suggestionAndMajorOpinionTable" style="height: 25%; display: block; overflow: auto;
-                                                                              margin-bottom: 0;">
+            <table class="table" id="suggestionAndMajorOpinionTable" style="height: 25%;/* display: block; */
+                                                            overflow: auto; margin-bottom: 0;">
                 <tr>
                     <th id="system_suggest" scope="col" style="height: 50%; width: 50%; text-align:center; font-weight: 400">
                         System Suggestion
@@ -79,8 +79,8 @@ ng-click="show_coordinate($event)">
                 </tr>
             </table>
 
-            <table class="table" id="HierarchyTable" style="height: 70%; display: block; overflow: auto; padding-right: 0; padding-left: 0">
-                <tr style="height: 25%;">
+            <table class="table" id="HierarchyTable" style="height: 70%; /* display: block;*/ overflow: auto; padding-right: 0; padding-left: 0">
+                <tr style="height: 15%;">
                     <th scope="col" style="width: 50%; text-align:center; font-weight: 400">
                         Term A Hierarchy
                     </th>
@@ -89,7 +89,7 @@ ng-click="show_coordinate($event)">
                     </th>
                 </tr>
 
-                <tr style="height: 75%;">
+                <tr style="height: 85%;">
                     <td style="width: 50%">
                         <table class="table table-borderless"  id="term_a_table_h">
                             <tbody ng-repeat="item in h_1">
