--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -1,4 +1,4 @@
-<div id="finish_exp" style="margin-top: 7%;margin-left: 0.5%;">
+<div id="finish_exp" class="col-sm-12" style="margin-top: 7%;margin-left: 0.5%;">
 
 	<h1 style="text-align: center">
 		Thank You!
@@ -37,7 +37,7 @@
     </div>-->
 
     <div class="row">
-        <div class="col">
+        <div class="col-sm-12">
             <div class="row">
                 <div class="col-sm-8">
                     <h3>Experiment Summary</h3>
