--- a/html/riddle.html
+++ b/html/riddle.html
@@ -91,7 +91,7 @@
                     </tr>
 
                     <tr>
-                        <td colspan="3">
+                        <td colspan="3" style="text-align: center;">
                             <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="show_test()">Go!</button>
                             <div id="riddle_err_log">
 
