--- a/html/exp.html
+++ b/html/exp.html
@@ -78,59 +78,61 @@ ng-click="show_coordinate($event)">
                     </td>
                 </tr>
             </table>
+            <div class="container" style="width: 100%">
+                <table class="table" id="HierarchyTable" style="height: 70%; display: block; overflow: auto; padding-right: 0; padding-left: 0">
+                    <tr style="height: 15%;">
+                        <th scope="col" style="width: 50%; text-align:center; font-weight: 400">
+                            Term A Hierarchy
+                        </th>
+                        <th scope="col" style="width: 50%; text-align:center; font-weight: 400">
+                            Term B Hierarchy
+                        </th>
+                    </tr>
 
-            <table class="table" id="HierarchyTable" style="height: 70%; /* display: block;*/ overflow: auto; padding-right: 0; padding-left: 0">
-                <tr style="height: 15%;">
-                    <th scope="col" style="width: 50%; text-align:center; font-weight: 400">
-                        Term A Hierarchy
-                    </th>
-                    <th scope="col" style="width: 50%; text-align:center; font-weight: 400">
-                        Term B Hierarchy
-                    </th>
-                </tr>
+                    <tr style="height: 85%;">
+                        <td style="width: 50%">
+                            <table class="table table-borderless"  id="term_a_table_h">
+                                <tbody ng-repeat="item in h_1">
+                                <tr ng-if="item.index==0">
+                                    <td  style="color:{{item.color}}; width: 25%">
+                                        <i class="fas fa-folder"></i>{{item.val}}
+                                    </td>
+                                </tr>
+                                <tr ng-if="item.index!=0">
+                                    <!--<td id="table_a_{{$index}}">
+                                        {{decorateWithSpace($index,item.val)}}
+                                    </td>-->
+                                    <td style="color:{{item.color}}; font-weight:{{item.weight}}; width: 25%">
+                                        <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </td>
 
-                <tr style="height: 85%;">
-                    <td style="width: 50%">
-                        <table class="table table-borderless"  id="term_a_table_h">
-                            <tbody ng-repeat="item in h_1">
-                            <tr ng-if="item.index==0">
-                                <td  style="color:{{item.color}}; width: 25%">
-                                    <i class="fas fa-folder"></i>{{item.val}}
-                                </td>
-                            </tr>
-                            <tr ng-if="item.index!=0">
-                                <!--<td id="table_a_{{$index}}">
-                                    {{decorateWithSpace($index,item.val)}}
-                                </td>-->
-                                <td style="color:{{item.color}}; font-weight:{{item.weight}}; width: 25%">
-                                    <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item.index)"></i><i class="fa fa-folder-open"></i>{{item.val}}
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </td>
+                        <td style="width: 50%">
+                            <table class="table table-borderless" id="term_b_table_h">
+                                <tbody ng-repeat="item2 in h_2">
+                                <tr ng-if="item2.index==0">
+                                    <td  style="color:{{item2.color}}; width: 25%">
+                                        <i class="fas fa-folder"></i> {{item2.val}}
+                                    </td>
+                                </tr>
+                                <tr ng-if="item2.index!=0" >
+                                    <!--<td id="table_b_{{$index}}">
+                                        {{decorateWithSpace($index,item2.val)}}
+                                    </td>-->
+                                    <td style="color:{{item2.color}}; font-weight:{{item2.weight}}; width: 25%">
+                                        <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
 
-                    <td style="width: 50%">
-                        <table class="table table-borderless" id="term_b_table_h">
-                            <tbody ng-repeat="item2 in h_2">
-                            <tr ng-if="item2.index==0">
-                                <td  style="color:{{item2.color}}; width: 25%">
-                                    <i class="fas fa-folder"></i> {{item2.val}}
-                                </td>
-                            </tr>
-                            <tr ng-if="item2.index!=0" >
-                                <!--<td id="table_b_{{$index}}">
-                                    {{decorateWithSpace($index,item2.val)}}
-                                </td>-->
-                                <td style="color:{{item2.color}}; font-weight:{{item2.weight}}; width: 25%">
-                                    <i class="fa fa-angle-double-right" ng-repeat="t in getCustomRepeatArray(item2.index)"></i><i class="fa fa-folder-open"></i>{{item2.val}}
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                </tr>
-            </table>
+            </div>
         </div>
 
         <div class="col-sm-3" style="height: 100%">
