--- a/html/exp.html
+++ b/html/exp.html
@@ -80,7 +80,7 @@ ng-click="show_coordinate($event)">
             </table>
             <div class="container" style="width: 100%">
                 <table class="table" id="HierarchyTable" style="height: 70%; display: block; overflow: auto; padding-right: 0; padding-left: 0">
-                    <tbody style="display: table;">
+                    <tbody style="display: table; width: 100%">
                         <tr style="height: 15%;">
                             <th scope="col" style="width: 50%; text-align:center; font-weight: 400">
                                 Term A Hierarchy
