--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -1,4 +1,4 @@
-<div id="finish_exp" class="col-sm-12" style="margin-top: 7%;margin-left: 0.5%;">
+<div id="finish_exp" class="col-sm-12" style="margin-top: 6%;margin-left: 0.5%; width: 97%">
 
 	<h1 style="text-align: center">
 		Thank You!
