--- a/html/nav.html
+++ b/html/nav.html
@@ -1,6 +1,6 @@
 <!-- Static navbar -->
 
-<div id="nav" style="height: 10%">
+<div id="nav">
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar" style="height: 10%; padding: 0 0 0 0;">
 		<div class="container" style="padding-left: 0px; margin-left: 0px; height: 100%;">
 			<a class="navbar-brand" href="#" ng-click="hide_pages(); show_home()" style="height: 115%; margin-left: 1%; margin-right: 1%;">
